# ChatRoom

./: CMakeLists.txt  README.md
src/: deprecated.txt  main.cpp
src/Classes/Backend/: ActionMetaData.h  BackendComms.cpp  BackendComms.h  BeckendComms.cpp  BeckendComms.h  ChatRoomHost.cpp  ChatRoomHost.h  RegisteredClient.cpp  RegisteredClient.h  Server.cpp  Server.h  ServerAction.cpp  ServerAction.h
src/Classes/Backend/MultiThreadedEnvironment/: Communications.cpp  Communications.h
src/Classes/Frontend/: Account.cpp  Account.h
src/Classes/GeneralTypes/: ClientAction.cpp  ClientAction.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  Messege.h  ServerAction.cpp  ServerAction.h  StreamableString.h
src/IO/: InstructionInterpreter.cpp  InstructionInterpreter.h  Terminal.cpp  Terminal.h
